"""Document-batches table field name constants."""


class DocumentBatches:
    """DynamoDB document-batches table field names."""

    BATCH_ID = "batchId"
    BATCH_STATUS = "batchStatus"
    TOTAL_FILES = "totalFiles"
    RESOLVED_COUNT = "resolvedCount"
    CATEGORY = "category"
    CREATED_AT = "createdAt"
    UPDATED_AT = "updatedAt"
    ERROR_MESSAGE = "errorMessage"
    TIME_TO_LIVE = "ttl"
    TENANT_ID = "tenantId"
    API_KEY_NAME = "apiKeyName"
