"""Document-builds table field name constants."""


class DocumentBuilds:
    BUILD_ID = "buildId"
    PAGE_NUMBER = "pageNumber"
    S3_PATH = "s3Path"
    ORIGINAL_FILE_NAME = "originalFileName"
    CATEGORY = "category"
    CREATED_AT = "createdAt"
    SUBMITTED_AT = "submittedAt"
    EXTERNAL_DOCUMENT_ID = "externalDocumentId"
    EXTERNAL_SYSTEM_ID = "externalSystemId"
    AI_CONSENT_FLAG = "aiConsentFlag"
    IS_BUILD_METADATA = "isBuildMetadata"
    TENANT_ID = "tenantId"
    API_KEY_NAME = "apiKeyName"
    UPLOAD_SOURCE = "uploadSource"
    TIME_TO_LIVE = "ttl"
