class DocumentMetadata:
    # core fields
    FILE_NAME = "fileName"
    ORIGINAL_FILE_NAME = "originalFileName"
    ORIGINAL_FILE_NAME_LOWER = "originalFileNameLower"
    USER_PROVIDED_DOCUMENT_CATEGORY = "userProvidedDocumentCategory"
    PROCESS_STATUS = "processStatus"
    DELETION_TYPE = "deletionType"  # "soft" | "hard" once a record is DELETED
    BDA_INVOCATION_ARN = "bdaInvocationArn"
    BDA_INVOCATION_ID = "bdaInvocationId"
    BDA_PROJECT_ARN_USED = "bdaProjectArn"
    # TODO: Rename to extractionOutputS3Uri -- used by both BDA and Textract paths
    BDA_OUTPUT_S3_URI = "bdaOutputS3Uri"
    ERROR_MESSAGE = "errorMessage"
    RESPONSE_JSON = "responseJson"
    RESPONSE_CODE = "responseCode"
    PROCESSED_DATE = "processedDate"
    JOB_ID = "jobId"
    SYSTEM_DOCUMENT_ID = "systemDocumentId"
    TRACE_ID = "traceId"
    BATCH_ID = "batchId"
    EXTERNAL_DOCUMENT_ID = "externalDocumentId"
    EXTERNAL_SYSTEM_ID = "externalSystemId"
    AI_CONSENT_FLAG = "aiConsentFlag"
    UPLOAD_METHOD = "uploadMethod"
    UPLOAD_SOURCE = "uploadSource"
    TENANT_ID = "tenantId"
    API_KEY_NAME = "apiKeyName"
    IS_DEMO = "isDemo"
    V1_API_RESPONSE_JSON = "v1ApiResponseJson"
    CREATED_AT = "createdAt"
    UPDATED_AT = "updatedAt"
    TIME_TO_LIVE = "ttl"

    # preclassification fields
    PRECLASSIFICATION_CATEGORY = "preclassificationCategory"
    PRECLASSIFICATION_CATEGORY_MATCH = "preclassificationCategoryMatch"
    PRECLASSIFICATION_CONFIDENCE = "preclassificationConfidence"
    PRECLASSIFICATION_INPUT_TOKENS = "preclassificationInputTokens"
    PRECLASSIFICATION_OUTPUT_TOKENS = "preclassificationOutputTokens"
    PRECLASSIFICATION_DURATION_SECONDS = "preclassificationDurationSeconds"
    PRECLASSIFICATION_MODEL_ID = "preclassificationModelId"
    PRECLASSIFICATION_BLUEPRINT_MATCHED_TYPE = "preclassificationBlueprintMatchedType"
    PRECLASSIFICATION_BLUEPRINT_MATCH_CONFIDENCE = "preclassificationBlueprintMatchConfidence"
    PRECLASSIFICATION_BLUEPRINT_MATCH_INPUT_TOKENS = "preclassificationBlueprintMatchInputTokens"
    PRECLASSIFICATION_BLUEPRINT_MATCH_OUTPUT_TOKENS = "preclassificationBlueprintMatchOutputTokens"
    PRECLASSIFICATION_BLUEPRINT_MATCH_DURATION_SECONDS = (
        "preclassificationBlueprintMatchDurationSeconds"
    )
    PRECLASSIFICATION_BLUEPRINT_MATCH_CATEGORY = "preclassificationBlueprintMatchCategory"
    PRECLASSIFICATION_MAX_DOCUMENT_COUNT_ON_PAGE = "preclassificationMaxDocumentCountOnPage"

    # image optimization fields
    CROP_BOUNDING_BOX = "cropBoundingBox"
    CROP_RETAINED_PERCENTAGE = "cropRetainedPercentage"
    CROP_DURATION_SECONDS = "cropDurationSeconds"
    CROP_INPUT_TOKENS = "cropInputTokens"
    CROP_OUTPUT_TOKENS = "cropOutputTokens"
    CROP_MODEL_ID = "cropModelId"
    GRAYSCALE_CONVERSION = "grayscaleConversion"
    PROCESSED_FILE_SIZE_BYTES = "processedFileSizeBytes"

    # performance tracking
    DOCUMENT_PROCESSOR_STARTED_AT = "documentProcessorStartedAt"
    BDA_STARTED_AT = "bdaStartedAt"  # legacy read-only (metrics aggregator fallback)
    BDA_COMPLETED_AT = "bdaCompletedAt"  # legacy read-only (metrics aggregator fallback)
    EXTRACTION_STARTED_AT = "extractionStartedAt"
    EXTRACTION_COMPLETED_AT = "extractionCompletedAt"
    EXTRACTION_PROCESSING_TIME_SECONDS = "extractionProcessingTimeSeconds"
    EXTRACTION_WAIT_TIME_SECONDS = "extractionWaitTimeSeconds"
    RESULT_PROCESSOR_STARTED_AT = "resultProcessorStartedAt"
    TOTAL_PROCESSING_TIME_SECONDS = "totalProcessingTimeSeconds"
    BDA_PROCESSING_TIME_SECONDS = "bdaProcessingTimeSeconds"  # time bda took to process the file
    BDA_WAIT_TIME_SECONDS = "bdaWaitTimeSeconds"  # time between s3 write and bda invocation
    IS_DOCUMENT_PROCESSOR_COLD_START = "isDocumentProcessorColdStart"
    PAGES_SENT_TO_BDA = "pagesSentToBda"
    S3_FETCH_DURATION_SECONDS = "s3FetchDurationSeconds"
    BDA_INVOKE_DURATION_SECONDS = "bdaInvokeDurationSeconds"
    BDA_INVOKE_RETRY_COUNT = "bdaInvokeRetryCount"
    BLUR_DETECTION_DURATION_SECONDS = "blurDetectionDurationSeconds"
    IMAGE_OPT_CROP_BLOCK_DURATION_SECONDS = "imageOptCropBlockDurationSeconds"
    IMAGE_OPT_WRITE_DURATION_SECONDS = "imageOptWriteDurationSeconds"

    # file metadata
    FILE_SIZE_BYTES = "fileSizeBytes"
    CONTENT_TYPE = "contentType"
    PAGES_DETECTED = "pagesDetected"
    IS_DOCUMENT_BLURRY = "isDocumentBlurry"
    IS_PASSWORD_PROTECTED = "isPasswordProtected"
    BLUR_ANALYSIS_FAILED = "blurAnalysisFailed"
    OCR_AVG_WORD_CONFIDENCE = "ocrAvgWordConfidence"
    DOCUMENT_WORD_COUNT = "documentWordCount"
    BLUR_LLM_CHECKED = "wasBlurLlmInvoked"
    IS_DOCUMENT_BLURRY_REASON = "isDocumentBlurryReason"
    DOCUMENT_WORD_QUADRANT_STATS = "documentWordQuadrantStats"
    DOCUMENT_METRICS_RAW = "documentMetricsRaw"
    DOCUMENT_METRICS_NORMALIZED = "documentMetricsNormalized"

    # operational intelligence
    ADDITIONAL_INFO = "additionalInfo"
    RETRY_COUNT = "retryCount"
    FIELD_CONFIDENCE_SCORES = "fieldConfidenceScores"

    # bda processing info
    USED_CATEGORY_SPECIFIC_PROJECT = "usedCategorySpecificProject"
    BDA_REGION_USED = "bdaRegionUsed"
    BDA_MATCHED_BLUEPRINT_NAME = "matchedBlueprintName"
    BDA_MATCHED_BLUEPRINT_CONFIDENCE = "matchedBlueprintConfidence"
    BDA_MATCHED_DOCUMENT_CLASS = "bdaMatchedDocumentClass"

    # list of blueprint fields that were expected but did not have any data extracted
    BDA_MATCHED_BLUEPRINT_FIELD_EMPTY_LIST = "matchedBlueprintFieldEmptyList"
    BDA_MATCHED_BLUEPRINT_FIELD_MISSING_GEOMETRY_LIST = "matchedBlueprintFieldMissingGeometryList"
    BDA_MATCHED_BLUEPRINT_FIELD_BELOW_THRESHOLD_LIST = "matchedBlueprintFieldBelowThresholdList"
    BDA_MATCHED_BLUEPRINT_FIELD_COUNT = "matchedBlueprintFieldCount"
    BDA_MATCHED_BLUEPRINT_FIELD_COUNT_NOT_EMPTY = "matchedBlueprintFieldCountNotEmpty"
    BDA_MATCHED_BLUEPRINT_FIELD_NOT_EMPTY_AVG_CONFIDENCE = (
        "matchedBlueprintFieldNotEmptyAvgConfidence"
    )
    BELOW_EXTRACTION_CONFIDENCE_FLOOR = "belowExtractionConfidenceFloor"
    EXTRACTION_RULES_CONFIGURED = "extractionRulesConfigured"
    MISSING_REQUIRED_FIELD_LIST = "missingRequiredFieldList"
    REQUIRED_FIELD_LIST = "requiredFieldList"
    EXTRACTION_CONFIDENCE_THRESHOLD = "extractionConfidenceThreshold"
    USED_DEFAULT_EXTRACTION_CONFIDENCE_THRESHOLD = "usedDefaultExtractionConfidenceThreshold"

    # extraction method
    EXTRACT_METHOD = "extractionMethod"

    # otel trace propagation
    TRACEPARENT = "traceparent"

    # used to determine if a document should be processed or excluded from
    # processing based on the tenant's configuration
    PROCESSING_PERCENTAGE = "processingPercentage"
    PROCESSING_ASSIGNED_VALUE = "processingAssignedValue"
